# AcadGraph

./: .env.example  .gitignore  .pyre_configuration  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: three_layer_kg_design.md  证据链kg升级_0ecf1e78.plan.md
scripts/: run_ingest.py  semantic_entity_merge.py
src/acadgraph/: __init__.py  cli.py  config.py  embedding_client.py  llm_client.py
src/acadgraph/kg/: __init__.py  incremental_builder.py  interfaces.py  jsonl_loader.py  ontology.py  paper_parser.py  query_engine.py  schema.py
src/acadgraph/kg/extract/: __init__.py  argumentation.py  entities.py  evolution.py  peer_review.py
src/acadgraph/kg/prompts/: __init__.py  loader.py
src/acadgraph/kg/prompts/argumentation/: argumentation_schema.md  argumentation_schema_system.md  evidence_linking.md  evidence_system.md  zoning.md  zoning_system.md
src/acadgraph/kg/prompts/citation/: citation_batch.md  citation_classification.md  citation_llm_extract.md  citation_system.md  evolution_detection.md
src/acadgraph/kg/prompts/entity/: entity_dedup.md  entity_extraction.md  (+1 more)
src/acadgraph/kg/storage/: __init__.py  neo4j_store.py  qdrant_store.py
tests/: test_argumentation_validation.py  test_concurrency.py  test_config.py  test_embedding_client.py  test_evolution.py  test_incremental_builder.py  test_innovation_queries.py  test_jsonl_loader.py  test_llm_client.py  test_paper_parser.py  test_query_engine.py  test_schema.py  test_section_tree.py  test_storage.py
tools/: query_papers.py  verify_citations.py
